[gd_scene load_steps=3 format=3 uid="uid://baye2h43jfsal"]

[ext_resource type="Script" uid="uid://brfxwtpcvtgah" path="res://scripts/ui/surface_panel.gd" id="1_rii4w"]
[ext_resource type="PackedScene" uid="uid://cyapcu0jblhl4" path="res://scenes/ui/ResourceDisplay.tscn" id="2_abcde"]

[node name="SurfacePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rii4w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ResourceDisplayPanel" parent="VBoxContainer" instance=ExtResource("2_abcde")]
layout_mode = 2

[node name="SmeltingPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SmeltingPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="VBoxContainer/SmeltingPanel/VBoxContainer"]
layout_mode = 2
text = "Smelting"
horizontal_alignment = 1

[node name="SmeltingGrid" type="GridContainer" parent="VBoxContainer/SmeltingPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="ActionButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer/ActionButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue Mining"

[node name="NewMineButton" type="Button" parent="VBoxContainer/ActionButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Start New Mine"
